# AG_Engine

./: .gitignore  CMakeLists.txt  compileShader.bat
include/: Component.hpp  Entity.hpp  Event.hpp  ModelData.hpp  Texture.hpp  Transform.hpp  Transform3D.hpp  VertexData.hpp  Window.hpp  shaderShape.h  shaderTexture.h  shaderVert.h  shader_frag_spv.h  shader_shape_frag.h  shader_texture_frag_spv.h  shader_vert_spv.h
shader/: shader.glsl.frag  shader.glsl.vert  texture.glsl.frag
src/: component.cpp  entity.cpp  event.cpp  modelData.cpp  texture.cpp  transform.cpp  transform3D.cpp  vertexData.cpp  window.cpp
